<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_font_download_black_24dp" />

        <TextView
            android:id="@+id/txt_setlanguage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingStart="16dp"
            android:text="@string/setting_language"
            android:textColor="#000000"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:paddingEnd="16dp"
            android:text="@string/language"
            android:textColor="#009688"
            android:textSize="20sp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btn_googleform"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:textColor="#FFFFFF"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:drawableLeft="@drawable/ic_photo_white_24dp"
            android:text="@string/google_form"
            android:autoLink="web"
            android:textSize="14sp"
            android:background="#00796B"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Contact Me"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btn_gmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E64A19"
            android:text="@string/gmail"
            android:autoLink="email"
            android:textColor="#FFFFFF">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0D47A1"
            android:text="@string/facebook"
            android:autoLink="all"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btn_credit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#170B3B"
            android:text="@string/credit"
            android:autoLink="all"
            android:textColor="#FFFFFF"/>
    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Korat Minivans version 0.0.1 Beta (Demo)"
            android:textSize="10sp"
            android:gravity="bottom|right"/>

        <TextView
            android:id="@+id/txt_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/transparent"/>

    </RelativeLayout>



</LinearLayout>