<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <fragment
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment"
            />

    </FrameLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_alignTop="@+id/view"
        android:background="@drawable/view_dropshadow" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_below="@+id/view2"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_marginRight = "5dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageStart"
                    android:layout_width="33dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_my_location_circle_with_dot_gray_36dp" />

                <AutoCompleteTextView
                    android:id="@+id/editText_Start"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_marginTop="8dp"
                    android:background="#60FFFFFF"
                    android:hint="@string/start_location"
                    android:paddingLeft="14dp"
                    android:textSize="14dp"
                    android:inputType="text" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageEnd"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_place_gray_36dp" />


                <AutoCompleteTextView
                    android:id="@+id/autoText_End"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:background="#60FFFFFF"
                    android:hint="@string/end_location"
                    android:paddingLeft="14dp"
                    android:textSize="14dp"
                    android:inputType="text"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <ImageButton
                android:id="@+id/btnStart"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_button_orange"
                android:src="@drawable/ic_my_location_white_18dp" />

            <ImageButton
                android:id="@+id/btnEnd"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/round_button_orange"
                android:src="@drawable/ic_add_location_white_18dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent">
            <Button
                android:id="@+id/btnSearch"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/round_button_blue"
                android:drawableTop="@drawable/ic_directions_white_24dp"
                android:paddingTop="5dp"
                android:text="@string/btn_go"
                android:textColor="@color/colorPrimary"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>